--- a/style.css
+++ b/style.css
@@ -2,3 +2,61 @@
    margin : 0px;
    padding : 0px;
 }
+
+body {
+   display : grid;
+   grid-template-columns : repeat(12, 1fr);
+   justify-content : center;
+   justify-items : center;
+   background-color : #ddddff;
+}
+
+h1 {
+   font-family : Marck Script;
+   font-size : 120px;
+   margin : 5p;
+}
+
+form {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+fieldset {
+   width: 800px;
+   padding: 10px;
+   margin-bottom: 10px;
+}
+legend {
+   font-size: 1.5rem;
+}
+label {
+   font-size : 20px;
+}
+header {
+   grid-column : 1 /span 12;
+   text-align : center;
+}
+input {
+   padding: 15px;
+   font-size: 20px;
+}
+input[type="submit"] {
+   width: 150px;
+   margin-bottom: 15px;
+}
+input[type="button"] {
+   display: none;
+}
+input[type="checkbox"] {
+   margin-right: 35px;
+}
+
+main {
+   grid-column : 1 /span 12;
+   display: flex;
+   flex-wrap : wrap;
+   flex-direction : row;
+   justify-content : space-evenly;
+   text-align : center;
+}
